@@ -252,6 +252,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 7460) Revert broken patch for bug 7226 which slows down
   Special:Allmessages by a factor of 16
 * Committed a bunch of live hacks from Wikimedia servers
+* (bug 6889) PHP notices in thumb.php with missing params
 
 
 == Languages updated ==
